# Quanser_mobile_robot-fYP

./: .gitignore  ACSAR_E_Implementation_Proposal.md  ACSAR_E_Implementation_Proposal.tex  QBot2_Simulation_Research.tex  Quancer_Mobile_Robot.ipynb  README.md  README_Simulation.md  backup.md  fix_kinect_camera_info.py  pdf_output.txt  qbot_sim.py  test_run.py
Presentation/ES71/: README.md
Vibration/: E20030_Baanu.ipynb
docs/: dependencies.md  project_objectives.md  setup_status.md
docs/daily_logs/: 01.Ros2_setup.md  02.Kobuki_driver.md  03.Kinect_v1_setup.md  04.Depth_to_scan.md  05.Robot_description.md  06.Robot_state_publisher.md  07.Slam_toolbox_mapping.md
fyp_ws/src/qbot2_bringup/: package.xml
fyp_ws/src/qbot2_bringup/config/: laser_filter.yaml  nav2_params.yaml  slam_params.yaml  (+1 more)
fyp_ws/src/qbot2_description/: package.xml
maps/: lab_map.pgm  lab_map.yaml  lab_map_final2.pgm  lab_map_final2.yaml  lab_map_test2.pgm  lab_map_test2.yaml
media/: README.md
presentation/: ES72_video_link.md  README.md
ros2_ws/src/qbot2_bringup/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/qbot2_description/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/qbot2_description/urdf/: qbot2.urdf
ros2_ws/src/qbot2_navigation/: README.md
ros2_ws/src/qbot2_perception/: README.md
ros2_ws/src/qbot2_slam/: README.md
scripts/: phase3_install_ros2_humble.sh  phase4_install_kobuki.sh  phase5_install_kinect_v1.sh  phase6_test_depth_to_scan.sh  phase9_start_slam_mapping.sh
web_ide/: main.py
web_ide/static/: index.html  script.js  style.css
(+11 files in other folders)
