<?xml version="1.0"?>
<package format="3">
  <name>qbot2_description</name>
  <version>0.0.1</version>
  <description>QBot 2 URDF description</description>
  <maintainer email="test@test.com">kobuki</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
</package>
